tests/exceptions/ill-typed/ambiguous-panic-type-1.stella
language core;

extend with #panic;

fn main(a : Nat) -> Nat {
  return panic!(0)
}